[package]
name = "ytdl"
version = "0.1.0"
authors = ["Gokul Soumya <gokulps15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4.0"

[dependencies.rustube]
version = "0.2.10"
features = ["blocking", "download", "regex", "std", "descramble"]
